@@ -1,5 +1,8 @@
 2008-01-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/DevDiscover/JunOS.pm: Added interface filter to
+	exclude service interfaces
+
 	* perllib/Torrus/DevDiscover.pm, perllib/Torrus/Collector/SNMP.pm:
 	snmp-max-msg-size, new parameter for SNMP session
 
